# Rustventure

./: .gitignore  Cargo.toml  index.html  index.js  package.json  rust_game.d.ts  rust_game.js  rust_game_bg.d.ts  rust_game_bg.wasm  utils.js  webpack.config.js
src/: characters.rs  lib.rs  utils.rs
tests/: unit_test.rs
